// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test SQLRenderer.Snippet render snap when basic props are set 1`] = `
<div>
  <div
    class="actiontech-sql-snippet-renderer-wrapper css-dz7fl9"
  >
    <div
      class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-multiple-line margin-bottom-0"
    >
      <span>
        <span
          class="hljs-keyword"
        >
          CREATE TABLE
        </span>
         IF 
        <span
          class="hljs-keyword"
        >
          NOT
        </span>
         
        <span
          class="hljs-keyword"
        >
          EXISTS
        </span>
        
    task (
      id 
        <span
          class="hljs-type"
        >
          BIGINT
        </span>
         UNSIGNED AUTO_INCREMENT 
        <span
          class="hljs-keyword"
        >
          PRIMARY KEY
        </span>
        ,
      title 
        <span
          class="hljs-type"
        >
          VARCHAR
        </span>
        (
        <span
          class="hljs-number"
        >
          255
        </span>
        ) 
        <span
          class="hljs-keyword"
        >
          NOT NULL
        </span>
         
        <span
          class="hljs-keyword"
        >
          DEFAULT
        </span>
         
        <span
          class="hljs-string"
        >
          ''
        </span>
        ,
      description TEXT,
      status ENUM(
        <span
          class="hljs-string"
        >
          'pending'
        </span>
        , 
        <span
          class="hljs-string"
        >
          'completed'
        </span>
        ) 
        <span
          class="hljs-keyword"
        >
          NOT NULL
        </span>
         
        <span
          class="hljs-keyword"
        >
          DEFAULT
        </span>
         
        <span
          class="hljs-string"
        >
          'pending'
        </span>
        ,
      created_at 
        <span
          class="hljs-type"
        >
          TIMESTAMP
        </span>
         
        <span
          class="hljs-keyword"
        >
          DEFAULT
        </span>
         
        <span
          class="hljs-built_in"
        >
          CURRENT_TIMESTAMP
        </span>
        ,
      updated_at 
        <span
          class="hljs-type"
        >
          TIMESTAMP
        </span>
         
        <span
          class="hljs-keyword"
        >
          DEFAULT
        </span>
         
        <span
          class="hljs-built_in"
        >
          CURRENT_TIMESTAMP
        </span>
         
        <span
          class="hljs-keyword"
        >
          ON
        </span>
         
        <span
          class="hljs-keyword"
        >
          UPDATE
        </span>
         
        <span
          class="hljs-built_in"
        >
          CURRENT_TIMESTAMP
        </span>
        
    );
      </span>
    </div>
  </div>
</div>
`;

exports[`test SQLRenderer.Snippet render snap when loading is not undefined 1`] = `
<div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="actiontech-sql-snippet-renderer-wrapper css-dz7fl9"
      >
        <div
          class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-multiple-line margin-bottom-0"
        >
          <span>
            <span
              class="hljs-keyword"
            >
              CREATE TABLE
            </span>
             IF 
            <span
              class="hljs-keyword"
            >
              NOT
            </span>
             
            <span
              class="hljs-keyword"
            >
              EXISTS
            </span>
            
    task (
      id 
            <span
              class="hljs-type"
            >
              BIGINT
            </span>
             UNSIGNED AUTO_INCREMENT 
            <span
              class="hljs-keyword"
            >
              PRIMARY KEY
            </span>
            ,
      title 
            <span
              class="hljs-type"
            >
              VARCHAR
            </span>
            (
            <span
              class="hljs-number"
            >
              255
            </span>
            ) 
            <span
              class="hljs-keyword"
            >
              NOT NULL
            </span>
             
            <span
              class="hljs-keyword"
            >
              DEFAULT
            </span>
             
            <span
              class="hljs-string"
            >
              ''
            </span>
            ,
      description TEXT,
      status ENUM(
            <span
              class="hljs-string"
            >
              'pending'
            </span>
            , 
            <span
              class="hljs-string"
            >
              'completed'
            </span>
            ) 
            <span
              class="hljs-keyword"
            >
              NOT NULL
            </span>
             
            <span
              class="hljs-keyword"
            >
              DEFAULT
            </span>
             
            <span
              class="hljs-string"
            >
              'pending'
            </span>
            ,
      created_at 
            <span
              class="hljs-type"
            >
              TIMESTAMP
            </span>
             
            <span
              class="hljs-keyword"
            >
              DEFAULT
            </span>
             
            <span
              class="hljs-built_in"
            >
              CURRENT_TIMESTAMP
            </span>
            ,
      updated_at 
            <span
              class="hljs-type"
            >
              TIMESTAMP
            </span>
             
            <span
              class="hljs-keyword"
            >
              DEFAULT
            </span>
             
            <span
              class="hljs-built_in"
            >
              CURRENT_TIMESTAMP
            </span>
             
            <span
              class="hljs-keyword"
            >
              ON
            </span>
             
            <span
              class="hljs-keyword"
            >
              UPDATE
            </span>
             
            <span
              class="hljs-built_in"
            >
              CURRENT_TIMESTAMP
            </span>
            
    );
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test SQLRenderer.Snippet render snap when sql is empty 1`] = `
<div>
  <div
    class="actiontech-sql-snippet-renderer-wrapper css-dz7fl9"
  >
    <span
      class="empty-sql-placeholder"
    >
      empty
    </span>
  </div>
</div>
`;
